--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
                 I'm also a Research Engineer at <a href="https://www.openmined.org/"> OpenMined</a> where I contribute to Privacy-Preserving technologies in Computer Vision Domain.
               </p>
               <p style="text-align:center">
-                <a target="_blank" href="kotti.sasikanth@gmail.com"> Email</a> &nbsp;/&nbsp;
+                <a href="mailto:kotti.sasikanth@gmail.com"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/ksasi">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://scholar.google.com/citations?user=xu9ngo8AAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
                 <a href="https://twitter.com/kotti_sasikanth"> Twitter </a> &nbsp;/&nbsp;
