--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
               </h1>
               <p>
                 I'm a part-time Masters student in Artificial Intelligence (M.Tech) at <a href="https://iitj.ac.in"> IITJ-Indian Institute of Technology Jodhpur</a>, 
-                currently being advised by <a href="http://home.iitj.ac.in/~mvatsa/">Dr. Mayank Vatsa</a> and <a href="http://home.iitj.ac.in/~richa/">Dr. Richa Singh</a>.
+                currently being advised by <br> <a href="http://home.iitj.ac.in/~mvatsa/">Dr. Mayank Vatsa</a> and <a href="http://home.iitj.ac.in/~richa/">Dr. Richa Singh</a>.
               </p>
               <p>
                 My research interests span Computer Vision, Trusted AI,  Machine Learning and Deep learning areas.
