--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
                 Sasikanth Kotti
               </h1>
               <p>
-                I'm a part-time Masters student in Artificial Intelligence (M.Tech) at <a href="https://iitj.ac.in"> IITJ-Indian Institute of Technology Jodhpur</a>. 
+                I'm a part-time Master's student in Artificial Intelligence (M.Tech) at <a href="https://iitj.ac.in"> IITJ-Indian Institute of Technology Jodhpur</a>. 
                 I'm currently being advised by <a href="http://home.iitj.ac.in/~mvatsa/">Dr. Mayank Vatsa</a> and <a href="http://home.iitj.ac.in/~richa/">Dr. Richa Singh</a> for my Master's Thesis.
               </p>
               <p>
