--- a/_layouts/default_backup.html
+++ b/_layouts/default_backup.html
@@ -64,7 +64,9 @@
           {% for cat in post.categories %}
           {% if cat == 'Publications' %}
           <tr>
-            
+            <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+              <img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
+            </td>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
               <h3>{{post.title}}</h3>
               <br>
@@ -114,6 +116,9 @@
           {% for cat in post.categories %}
           {% if cat == 'Selected Projects' %}
           <tr>
+            <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+              <img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
+            </td>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
               <h3>{{post.title}}</h3>
               <br>
