updated default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
                 I'm currently being advised by <a href="http://home.iitj.ac.in/~mvatsa/">Dr. Mayank Vatsa</a> and <a href="http://home.iitj.ac.in/~richa/">Dr. Richa Singh</a> for my Master's Thesis.
               </p>
               <p>
-                My research interests span Computer Vision, Trusted AI,  Machine Learning and Deep learning areas.
+                My current research interests span Computer Vision, Trusted AI,  Machine Learning and Deep learning areas.
               </p>
               <p>
                 I'm also a Research Engineer at <a href="https://www.openmined.org/"> OpenMined</a> where I contribute to Privacy-Preserving technologies in Computer Vision Domain.
@@ -83,10 +83,10 @@
               <a href="{{post.code}}">code</a> /
               {% endif %}
               {% if post.poster %}
-              <a href="{{post.poster}}">poster</a> /
+              <a href="{{post.poster}}">poster</a>
               {% endif %}
               {% if post.slides %}
-              <a href="{{post.slides}}">slides</a> /
+              <a href="{{post.slides}}">slides</a>
               {% endif %}
               <p></p>
               {{ post.excerpt }}
