--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
               </h1>
               <p>
                 I'm a part-time Master's student in Artificial Intelligence (M.Tech) at <a href="https://iitj.ac.in"> IITJ-Indian Institute of Technology Jodhpur</a>. 
-                I'm currently being advised by <a href="http://home.iitj.ac.in/~mvatsa/">Dr. Mayank Vatsa</a> and <a href="http://home.iitj.ac.in/~richa/">Dr. Richa Singh</a> for my Master's Thesis.
+                I'm currently being advised by <a href="http://home.iitj.ac.in/~mvatsa/">Dr. Mayank Vatsa</a> and <a href="http://home.iitj.ac.in/~richa/">Dr. Richa Singh</a> for my Master's Thesis at <a href="http://iab-rubric.org/">IAB lab</a>.
               </p>
               <p>
                 My current research interests span Computer Vision, Trusted AI,  Machine Learning and Deep learning areas.
@@ -65,7 +65,7 @@
           {% if cat == 'Publications' %}
           <tr>
             
-            <td style="padding:2.5%;width:75%;vertical-align:middle">
+            <td style="padding:2.5%;width:90%;vertical-align:middle">
               <h3>{{post.title}}</h3>
               <br>
               {{post.authors}}
@@ -114,7 +114,7 @@
           {% for cat in post.categories %}
           {% if cat == 'Selected Projects' %}
           <tr>
-            <td style="padding:2.5%;width:75%;vertical-align:middle">
+            <td style="padding:2.5%;width:90%;vertical-align:middle">
               <h3>{{post.title}}</h3>
               <br>
               <em>{{post.categories}} {{post.course}}</em>
