--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -207,9 +207,9 @@
             <td style="padding:2.5%;width:90%;vertical-align:middle">
               <h3>{{post.title}}</h3>
               <br>
-              <em>{{post.categories}} {{post.course}}</em>
+              {{post.authors}}
               <br>
-              {{ post.date | date: "%Y-%m-%d" }}
+              <em>{{post.venue}}</em>
               <br>
               {% if post.report %}
               <a href="{{post.report}}">report</a> /
