--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -184,24 +184,32 @@
             </td>
           </tr>
           {% endif %}
+          {% endfor %}
+          {% endfor %}
+        </table>
+
         <br>
         <br>
         <br>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Selected Projects</h2>
+              <h2>Projects</h2>
               <p> These include coursework, side projects and unpublished research work. </p>
             </td>
           </tr>
         </table>
-        
-          {% if cat == 'SelectedProjects' %}
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+
+          {% for post in site.posts %}
+          {% for cat in post.categories %}
+          {% if cat == 'Projects' %}
           <tr>
             <td style="padding:2.5%;width:90%;vertical-align:middle">
               <h3>{{post.title}}</h3>
               <br>
               {{post.authors}}
+              
               <br>
               <em>{{post.venue}}</em>
               <br>
