--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -194,7 +194,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Projects</h2>
+              <h2>Selected Projects</h2>
               <p> These include coursework, side projects and unpublished research work. </p>
             </td>
           </tr>
@@ -203,13 +203,13 @@
 
           {% for post in site.posts %}
           {% for cat in post.categories %}
-          {% if cat == 'Projects' %}
+          {% if cat != 'Publications' %}
           <tr>
             <td style="padding:2.5%;width:90%;vertical-align:middle">
               <h3>{{post.title}}</h3>
               <br>
               {{post.authors}}
-              
+
               <br>
               <em>{{post.venue}}</em>
               <br>
