--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -201,29 +201,29 @@
         </table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
 
-          {% for post2 in site.posts %}
-          {% for cat2 in post2.categories %}
-          {% if cat2 != 'Publications' %}
+          {% for post in site.posts %}
+          {% for cat in post2.categories %}
+          {% if cat != 'Publications' %}
           <tr>
             <td style="padding:2.5%;width:90%;vertical-align:middle">
-              <h3>{{post2.title}}</h3>
+              <h3>{{post.title}}</h3>
               <br>
-              {{post2.authors}}
+              {{post.authors}}
 
               <br>
-              <em>{{post2.venue}}</em>
+              <em>{{post.venue}}</em>
               <br>
-              {% if post2.report %}
-              <a href="{{post2.report}}">report</a> /
+              {% if post.report %}
+              <a href="{{post.report}}">report</a> /
               {% endif %}
-              {% if post2.presentation %}
-              <a href="{{post2.presentation}}">presentation</a> /
+              {% if post.presentation %}
+              <a href="{{post.presentation}}">presentation</a> /
               {% endif %}
               {% if post2.code %}
-              <a href="{{post2.code}}">code</a> /
+              <a href="{{post.code}}">code</a> /
               {% endif %}
               <p></p>
-              {{ post2.excerpt }}
+              {{ post.excerpt }}
             </td>
           </tr>
           {% endif %}
