--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -200,9 +200,10 @@
           </tr>
         </table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-
+          {% set _stub = site.posts.rewind() %}
+          {% set _stub = post.categories.rewind() %}
           {% for post in site.posts %}
-          {% for cat in post2.categories %}
+          {% for cat in post.categories %}
           {% if cat != 'Publications' %}
           <tr>
             <td style="padding:2.5%;width:90%;vertical-align:middle">
