--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -218,7 +218,7 @@
               {% if post.presentation %}
               <a href="{{post.presentation}}">presentation</a> /
               {% endif %}
-              {% if post2.code %}
+              {% if post.code %}
               <a href="{{post.code}}">code</a> /
               {% endif %}
               <p></p>
