--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -203,7 +203,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           {% for post in site.posts %}
           {% for cat in post.categories %}
-          {% if cat == 'Publications' %}
+          {% if cat == 'IIT Jodhpur' %}
           <tr>
             <td style="padding:2.5%;width:90%;vertical-align:middle">
               <h3>{{post.title}}</h3>
