Updated thesis and community participation details

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,13 +95,16 @@
               </h1>
               <p>
                 I'm a part-time Master's student in Artificial Intelligence (M.Tech) at <a href="https://iitj.ac.in"> IITJ-Indian Institute of Technology Jodhpur</a>. 
-                I'm currently being advised by <a href="http://home.iitj.ac.in/~mvatsa/">Dr. Mayank Vatsa</a> and <a href="http://home.iitj.ac.in/~richa/">Dr. Richa Singh</a> for my Master's Thesis at <a href="http://iab-rubric.org/">IAB lab</a>.
+                I'm currently being advised by <a href="http://home.iitj.ac.in/~mvatsa/">Dr. Mayank Vatsa</a> and <a href="http://home.iitj.ac.in/~richa/">Dr. Richa Singh</a> for my Master's Thesis on <b>"Very Low Resolution Image Recognition"</b> at <a href="http://iab-rubric.org/">IAB lab</a>.
               </p>
               <p>
                 My current research interests span Computer Vision, Trusted AI,  Machine Learning and Deep learning areas.
               </p>
               <p>
                 I'm also a Research Engineer at <a href="https://www.openmined.org/"> OpenMined</a> where I contribute to Privacy-Preserving technologies in Computer Vision Domain.
+              </p>
+              <p>
+                I am also an active participant at <a href="https://mlcollective.org/">ML Collective</a> and <a href="https://cohere.for.ai/">Cohere For AI</a>  communities
               </p>
               <p style="text-align:center">
                 <a href="mailto:kotti.sasikanth@gmail.com"> Email</a> &nbsp;/&nbsp;
