Updated acceptance to CVIT Summer School

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -128,6 +128,11 @@
                     <p>
                     <h2>News</h2>
                     <ul>
+
+                      <li>
+      <b>[July 2022]</b>  Accepted to 
+      <a href="http://cvit.iiit.ac.in/summerschool2022/">CVIT 6th Summer School on AI (With focus on Computer Vision & Machine Learning)</a> <span class="blinking">(NEW)</span><br />
+                      </li>
                       
                         <li>
     <b>[Jan 2022]</b>  Accepted to participate in 
@@ -135,7 +140,7 @@
                       </li>
     
                        <li>
-    <b>[May 2022]</b> Secured <a href="https://ksasi.github.io/pdfs/NoCodeML.pdf">2nd place</a> in NoCode ML a team event conducted by Techfest, IIT Bombay  <span class="blinking">(NEW)</span><br />
+    <b>[May 2022]</b> Secured <a href="https://ksasi.github.io/pdfs/NoCodeML.pdf">2nd place</a> in NoCode ML a team event conducted by Techfest, IIT Bombay  <span class="blinking"></span><br />
                       </li>
 
                       <li>
