--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -131,7 +131,7 @@
 
                       <li>
       <b>[July 2022]</b>  Accepted to 
-      <a href="http://cvit.iiit.ac.in/summerschool2022/">CVIT 6th Summer School on AI (With focus on Computer Vision & Machine Learning)</a> <span class="blinking">(NEW)</span><br />
+      <a href="http://cvit.iiit.ac.in/summerschool2022/">CVIT 6th Summer School on AI (With focus on Computer Vision & Machine Learning)</a> <a href="https://ksasi.github.io/pdfs/SS2022_Certificate-242.pdf"> [certificate]</a><span class="blinking">(NEW)</span><br />
                       </li>
                       
                         <li>
