--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@
               </h1>
               <p>
                 I'm a part-time Master's student in Artificial Intelligence (M.Tech) at <a href="https://iitj.ac.in"> IITJ-Indian Institute of Technology Jodhpur</a>. 
-                I'm currently being advised by <a href="http://home.iitj.ac.in/~mvatsa/">Dr. Mayank Vatsa</a> and <a href="http://home.iitj.ac.in/~richa/">Dr. Richa Singh</a> for my Master's Thesis on <b>"Very Low Resolution Image Recognition"</b> at <a href="http://iab-rubric.org/">IAB lab</a>.
+                I'm currently being advised by <a href="http://home.iitj.ac.in/~mvatsa/">Dr. Mayank Vatsa</a> and <a href="http://home.iitj.ac.in/~richa/">Dr. Richa Singh</a> for my Master's Thesis on <b>"Bias and Fairness in Low Resolution(Very) Image Recognition"</b> at <a href="http://iab-rubric.org/">IAB lab</a>.
               </p>
               <p>
                 My current research interests span Computer Vision, Trusted AI,  Machine Learning and Deep learning areas.
