--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -203,6 +203,9 @@
         <br>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
+            <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+              <img src="{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
+            </td>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Selected Projects</h2>
               <p> These include coursework, side projects and unpublished research work. </p>
