Updated profile for different communities

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -104,7 +104,7 @@
                 I'm also a Research Engineer at <a href="https://www.openmined.org/"> OpenMined</a> where I contribute to Privacy-Preserving technologies in Computer Vision Domain.
               </p>
               <p>
-                I am also an active participant at <a href="https://mlcollective.org/">ML Collective</a> and <a href="https://cohere.for.ai/">Cohere For AI</a>  communities
+                I am also an active participant at <a href="https://mlcollective.org/">ML Collective</a>, <a href="https://cohere.for.ai/">Cohere For AI</a>, <a href="https://www.trustworthyml.org/symposium">Trustworthy ML</a> and <a href="https://www.avidml.org/">AI Vulnerability Database</a> communities 
               </p>
               <p style="text-align:center">
                 <a href="mailto:kotti.sasikanth@gmail.com"> Email</a> &nbsp;/&nbsp;
