--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -135,21 +135,21 @@
                       </li>
 
                       <li>
-      <b>[July 2022]</b>  Accepted to 
-      <a href="http://cvit.iiit.ac.in/summerschool2022/">CVIT 6th Summer School on AI (With focus on Computer Vision & Machine Learning)</a> <a href="https://ksasi.github.io/pdfs/SS2022_Certificate-242.pdf"> [certificate]</a><span class="blinking"></span><br />
+        <b>[July 2022]</b>  Accepted to 
+        <a href="http://cvit.iiit.ac.in/summerschool2022/">CVIT 6th Summer School on AI (With focus on Computer Vision & Machine Learning)</a> <a href="https://ksasi.github.io/pdfs/SS2022_Certificate-242.pdf"> [certificate]</a><span class="blinking"></span><br />
                       </li>
                       
                         <li>
-    <b>[Jan 2022]</b>  Accepted to participate in 
-    <a href="https://sites.google.com/view/researchweek2022">Research Week with Google 2022</a> <a href="https://ksasi.github.io/pdfs/Sasikanth Kotti_Google_Research_Week_2022.pdf"> [certificate]</a><span class="blinking"></span><br />
+        <b>[Jan 2022]</b>  Accepted to participate in 
+        <a href="https://sites.google.com/view/researchweek2022">Research Week with Google 2022</a> <a href="https://ksasi.github.io/pdfs/Sasikanth Kotti_Google_Research_Week_2022.pdf"> [certificate]</a><span class="blinking"></span><br />
                       </li>
     
                        <li>
-    <b>[May 2022]</b> Secured <a href="https://ksasi.github.io/pdfs/NoCodeML.pdf">2nd place</a> in NoCode ML a team event conducted by Techfest, IIT Bombay  <span class="blinking"></span><br />
+        <b>[May 2022]</b> Secured <a href="https://ksasi.github.io/pdfs/NoCodeML.pdf">2nd place</a> in NoCode ML a team event conducted by Techfest, IIT Bombay  <span class="blinking"></span><br />
                       </li>
 
                       <li>
-    <b>[July 2021]</b> Secured 2nd place in flax-jax-community-week a team event conducted by Hugging Face for the project   <a href="https://ksasi.github.io/pdfs/Hugging_Face_Jax.pdf">CLIP+NeRF: Fewshot Learning, Putting NeRF on a Diet</a>
+        <b>[July 2021]</b> Secured 2nd place in flax-jax-community-week a team event conducted by Hugging Face for the project   <a href="https://ksasi.github.io/pdfs/Hugging_Face_Jax.pdf">CLIP+NeRF: Fewshot Learning, Putting NeRF on a Diet</a>
                       </li>
             </tr>
         </tbody></table>
@@ -165,7 +165,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             {% for post in site.posts %}
             {% for cat in post.categories %}
-            {% if cat == 'Thesis' %}
+            {% if cat == 'Projects' %}
             <tr>
               <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
                 <img src="{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
