--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -165,7 +165,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             {% for post in site.posts %}
             {% for cat in post.categories %}
-            {% if cat == 'Projects' %}
+            {% if cat == 'Thesis' %}
             <tr>
               <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
                 <img src="{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
