--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -175,7 +175,7 @@
                 <br>
                 <em>{{post.venue}} {{post.course}}</em>
                 <br>
-                {{ post.date | date: "%Y-%m-%d" }}
+                {{post.authors}}
                 
                 <br>
                 {% if post.report %}
