Updated latest news

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -128,10 +128,14 @@
                     <p>
                     <h2>News</h2>
                     <ul>
+                    
+                    <li>
+        <b>[April 2023]</b>  One of the top<a href="https://ksasi.github.io/pdfs/Cohere_4_AI_Top4_Contributors.pdf"> contributors</a> to the list of datasets for Instruction Tuning Multilingual community research Project at <a href="https://cohere.for.ai/">Cohere For AI</a> <a href="https://ksasi.github.io/pdfs/Team4_Instruction_Tuning_Multilingual_Research_Project.pdf"> [Note]</a><span class="blinking">(NEW)</span><br />
+                      </li>
 
                       <li>
         <b>[Jan 2023]</b>  Accepted to participate in 
-        <a href="https://sites.google.com/view/researchweek2023">Research Week with Google 2023</a> <!--a href="https://ksasi.github.io/pdfs/Sasikanth Kotti_Google_Research_Week_2022.pdf"> [certificate]</a--><span class="blinking">(NEW)</span><br />
+        <a href="https://sites.google.com/view/researchweek2023">Research Week with Google 2023</a> <a href="https://ksasi.github.io/pdfs/Sasikanth Kotti_Google_Research_Week_2023.pdf"> [certificate]</a><span class="blinking"></span><br />
                       </li>
 
                       <li>
@@ -286,6 +290,23 @@
           {% endif %}
           {% endfor %}
           {% endfor %}
+        </table>
+
+        <br>
+        <br>
+        <br>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          <tr>
+            <td style="padding:2.5%;width:100%;vertical-align:middle">
+              <h2>Professional Services</h2>
+              <p> 
+                <li>
+                  Reviewer for  
+                  <a href="https://iclr.cc/Conferences/2023/CallForTinyPapers">Tiny Papers</a>, a DEI initiative, ICLR 2023 <span class="blinking"></span><br />
+                </li>
+              </p>
+            </td>
+          </tr>
         </table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
