--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,7 +94,10 @@
                 Sasikanth Kotti
               </h1>
               <p>
-                I was a part-time Master's student in Artificial Intelligence (M.Tech) at <a href="https://iitj.ac.in"> IITJ-Indian Institute of Technology Jodhpur</a>. 
+                I am currently a 1st Year Ph.D. scholar in <a href="http://iab-rubric.org/">IAB lab</a> advised by <a href="http://home.iitj.ac.in/~mvatsa/">Dr. Mayank Vatsa</a> and <a href="http://home.iitj.ac.in/~richa/">Dr. Richa Singh</a> at <a href="https://iitj.ac.in"> IITJ-Indian Institute of Technology Jodhpur</a>.
+              </p>
+              <p>
+                I recently completed Master's in Artificial Intelligence (M.Tech) at <a href="https://iitj.ac.in"> IITJ-Indian Institute of Technology Jodhpur</a>. 
                 I was advised by <a href="http://home.iitj.ac.in/~mvatsa/">Dr. Mayank Vatsa</a> and <a href="http://home.iitj.ac.in/~richa/">Dr. Richa Singh</a> for my Master's Thesis on <b>"Bias and Fairness in Low Resolution(Very) Image Recognition"</b> at <a href="http://iab-rubric.org/">IAB lab</a>.
               </p>
               <p>
