Updated Details for current education and previous education

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,7 +94,7 @@
                 Sasikanth Kotti
               </h1>
               <p>
-                I am currently a 1st Year Ph.D. scholar in <a href="http://iab-rubric.org/">IAB lab</a> advised by <a href="http://home.iitj.ac.in/~mvatsa/">Dr. Mayank Vatsa</a> and <a href="http://home.iitj.ac.in/~richa/">Dr. Richa Singh</a> at <a href="https://iitj.ac.in"> IITJ-Indian Institute of Technology Jodhpur</a>.
+                I am currently pursuing my Ph.D at <a href="http://iab-rubric.org/">IAB lab</a> from <a href="https://iitj.ac.in"> IITJ-Indian Institute of Technology Jodhpur</a> in part-time mode under the guidance of <a href="http://home.iitj.ac.in/~mvatsa/">Dr. Mayank Vatsa</a> and <a href="http://home.iitj.ac.in/~richa/">Dr. Richa Singh</a>.
               </p>
               <p>
                 I recently completed Master's in Artificial Intelligence (M.Tech) at <a href="https://iitj.ac.in"> IITJ-Indian Institute of Technology Jodhpur</a>. 
