Updated Medal Details

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,15 +101,18 @@
                 I was advised by <a href="http://home.iitj.ac.in/~mvatsa/">Dr. Mayank Vatsa</a> and <a href="http://home.iitj.ac.in/~richa/">Dr. Richa Singh</a> for my Master's Thesis on <b>"Bias and Fairness in Low Resolution(Very) Image Recognition"</b> at <a href="http://iab-rubric.org/">IAB lab</a>.
               </p>
               <p>
+                I was the recepient of <a href="https://x.com/iitjodhpur/status/1727288669583855726?s=20"><b>Silver Medal</b></a> and <a href="https://x.com/iitjodhpur/status/1727288669583855726?s=20"><b>Mrs. Chander Mohini & Mr. Jeewan Kapoor Merit Prize</b></a> for the best academic performance in the graduating class of 2023 of M.Tech. (Artificial Intelligence) Program at IIT Jodhpur
+              </p>
+              <p>
                 My current research interests span Computer Vision, Trusted AI,  Machine Learning and Deep learning areas.
               </p>
               <p>
-                I'm also a Research Engineer at <a href="https://www.openmined.org/"> OpenMined</a> where I contribute to Privacy-Preserving technologies in Computer Vision Domain.
+                I'm also a Volunteer Research Engineer at <a href="https://www.openmined.org/"> OpenMined</a> where I contribute to Privacy-Preserving technologies in Computer Vision Domain.
               </p>
               <p>
                 I am also an active participant at <a href="https://mlcollective.org/">ML Collective</a>, <a href="https://cohere.for.ai/">Cohere For AI</a>, <a href="https://www.trustworthyml.org/symposium">Trustworthy ML</a> and <a href="https://www.avidml.org/">AI Vulnerability Database</a> communities 
               </p>
-              <p style="text-align:center">
+              <p style="text-align:left">
                 <a href="mailto:kotti.sasikanth@gmail.com"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/ksasi">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://scholar.google.com/citations?user=xu9ngo8AAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
@@ -131,9 +134,17 @@
                     <p>
                     <h2>News</h2>
                     <ul>
+
+                      <li>
+        <b>[November 2023]</b>  Recepient of <a href="https://ksasi.github.io/images/MT19AIE308_Silver_Medal.jpg"> Silver Medal</a> for the best academic performance in the graduating class of 2023 of M.Tech. (Artificial Intelligence) Program<span class="blinking">(NEW)</span><br />
+                      </li>
+
+                      <li>
+        <b>[November 2023]</b>  Recepient of <a href="https://ksasi.github.io/images/MT19AIE308_Mrs_Chander_Mohini_and_Mr._Jeewan_Kapoor_Merit_Prize.jpg"> Mrs. Chander Mohini & Mr. Jeewan Kapoor Merit Prize</a> for the best academic performance in the graduating class of 2023 of M.Tech. (Artificial Intelligence) Program</a><span class="blinking">(NEW)</span><br />
+                      </li>
                     
                     <li>
-        <b>[April 2023]</b>  One of the top<a href="https://ksasi.github.io/pdfs/Cohere_4_AI_Top4_Contributors.pdf"> contributors</a> to the list of datasets for Instruction Tuning Multilingual community research Project at <a href="https://cohere.for.ai/">Cohere For AI</a> <a href="https://ksasi.github.io/pdfs/Team4_Instruction_Tuning_Multilingual_Research_Project.pdf"> [Note]</a><span class="blinking">(NEW)</span><br />
+        <b>[April 2023]</b>  One of the top<a href="https://ksasi.github.io/pdfs/Cohere_4_AI_Top4_Contributors.pdf"> contributors</a> to the list of datasets for Instruction Tuning Multilingual community research Project at <a href="https://cohere.for.ai/">Cohere For AI</a> <a href="https://ksasi.github.io/pdfs/Team4_Instruction_Tuning_Multilingual_Research_Project.pdf"> [Note]</a><span class="blinking"></span><br />
                       </li>
 
                       <li>
@@ -305,7 +316,15 @@
               <p> 
                 <li>
                   Reviewer for  
-                  <a href="https://iclr.cc/Conferences/2023/CallForTinyPapers">Tiny Papers</a>, a DEI initiative, ICLR 2023 <span class="blinking"></span><br />
+                  Tiny Papers <a href="https://iclr.cc/Conferences/2023/CallForTinyPapers">2023</a>, <a href="https://iclr.cc/Conferences/2024/CallForTinyPapers">2024</a>, a DEI initiative at ICLR <span class="blinking"></span><br />
+                </li>
+                <li>
+                  Reviewer for  
+                  <a href="https://ml4h.cc/2023/">Machine Learning for Health (ML4H) 2023</a> Symposium<span class="blinking"></span><br />
+                </li>
+                <li>
+                  Reviewer for  
+                  NeurIPS 2023 Workshop - <a href="https://xai-in-action.github.io/">XAI in Action: Past, Present, and Future Applications</a><span class="blinking"></span><br />
                 </li>
               </p>
             </td>
