--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,11 +136,11 @@
                     <ul>
 
                       <li>
-        <b>[November 2023]</b>  Recepient of <a href="https://ksasi.github.io/images/MT19AIE308_Silver_Medal.jpg"> Silver Medal</a> for the best academic performance in the graduating class of 2023 of M.Tech. (Artificial Intelligence) Program<span class="blinking">(NEW)</span><br />
+        <b>[November 2023]</b>  Recepient of <a href="https://ksasi.github.io/images/MT19AIE308_Silver_Medal.jpg"> <b>Silver Medal</b></a> for the best academic performance in the graduating class of 2023 of M.Tech. (Artificial Intelligence) Program<span class="blinking">(NEW)</span><br />
                       </li>
 
                       <li>
-        <b>[November 2023]</b>  Recepient of <a href="https://ksasi.github.io/images/MT19AIE308_Mrs_Chander_Mohini_and_Mr._Jeewan_Kapoor_Merit_Prize.jpg"> Mrs. Chander Mohini & Mr. Jeewan Kapoor Merit Prize</a> for the best academic performance in the graduating class of 2023 of M.Tech. (Artificial Intelligence) Program</a><span class="blinking">(NEW)</span><br />
+        <b>[November 2023]</b>  Recepient of <a href="https://ksasi.github.io/images/MT19AIE308_Mrs_Chander_Mohini_and_Mr._Jeewan_Kapoor_Merit_Prize.jpg"> <b>Mrs. Chander Mohini & Mr. Jeewan Kapoor Merit Prize</b></a> for the best academic performance in the graduating class of 2023 of M.Tech. (Artificial Intelligence) Program</a><span class="blinking">(NEW)</span><br />
                       </li>
                     
                     <li>
