Updated with additional project and professional service details

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -316,6 +316,10 @@
               <p> 
                 <li>
                   Reviewer for  
+                  The 18th European Conference on Computer Vision ECCV <a href="https://eccv.ecva.net/">2024</a><span class="blinking"></span><br />
+                </li>
+                <li>
+                  Reviewer for  
                   Tiny Papers <a href="https://iclr.cc/Conferences/2023/CallForTinyPapers">2023</a>, <a href="https://iclr.cc/Conferences/2024/CallForTinyPapers">2024</a>, a DEI initiative at ICLR <span class="blinking"></span><br />
                 </li>
                 <li>
